# math-expression-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  setup.cfg
src/math_expression_generator/: __init__.py  generator.py  operators.py  utils.py
tests/: test_generator.py
