[metadata]
name = math_expression_generator
version = 0.1.0
author = Vishwas Zadte
author_email = vishwaszadte@gmail.com
description = A package for generating random mathematical expressions with customizable difficulty
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vishwaszadte/math-expression-generator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src